# lastfeeder

./: .gitignore  .sops.yaml  .travis.yml  README.rst  dev-requirements.in  dev-requirements.txt  ideas.rst  lastfeeder-cli.py  lastfeeder.py  lastfm_credentials.yml.example  misc.yml.example  pyproject.toml  requirements.in  requirements.txt  users.prod.txt  vars.py  web.yml.example
.github/workflows/: feeds.yml
ansible/: container.yml  main.yml  nginx.conf.j2  requirements.txt  users.yml.j2  vault.py.j2
ansible/group_vars/all/: vars  vault
ansible/lastfeeder.service/: run.j2
ansible/nginx.service/: run.j2
ansible/services/nginx/: run.j2
ansible/templates/: lastfeeder.conf.j2  lastfm_users.yml.j2  users.yml.j2
ansible/vars/: lastfm_users.yml.example  web.yml.example
docs/feeds/: Arcade1996.rss  Frippertron.rss  SlitYerGuts.rss  StreetlightX.rss  TalonsOfFire.rss  WillieFisterbut.rss  atari857.rss  citizen_mundi.rss  ddgromit.rss  dteller1.rss  evilgnomeandy.rss  evilgnomecandy.rss  fregtk.rss  gameofmetal.rss  irvingtan.rss  jkushner.rss  jmb294.rss  lintmunro.rss  manosg-.rss  metalstyles15.rss  mista_jelly.rss  rockijosh.rss  walrus898.rss
lastfeeder/: __init__.py  cli.py  lastfeeder-cli.py  lastfeeder.py  requirements.in  requirements.txt  vault.py.example
mk/: feeds.sh  fmt.sh  reqs.sh
sops/: lastfm.prod.yml
